--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,11 +12,14 @@ jobs:
     steps:
       # Install Salesforce CLI
       - name: Install Salesforce CLI
+        # # ~/cli/sf/install
         run: |
           wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-arm64.tar.xz
           mkdir -p ~/cli/sf
           tar xJf sf-linux-arm64.tar.xz -C ~/cli/sf --strip-components 1
-          ~/cli/sf/install
+          export PATH=~/cli/sf/bin:$PATH
+          PATH=~/cli/sf/bin:$PATH
+          sf -v
 
       - name: Salesforce CLI Setup
       # You may pin to the exact commit or the version.
