--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -12,14 +12,22 @@ jobs:
     steps:
       # Install Salesforce CLI
       - name: Install Salesforce CLI
-        # # ~/cli/sf/install
+        # wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-arm64.tar.xz
+        # tar xJf sf-linux-arm64.tar.xz -C ~/cli/sf --strip-components 1
+        # ~/cli/sf/install
         run: |
-          wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-arm64.tar.xz
+          wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-x64.tar.xz
+          echo "Download Finish."
           mkdir -p ~/cli/sf
-          tar xJf sf-linux-arm64.tar.xz -C ~/cli/sf --strip-components 1
+          echo "Make a Dir."
+          tar xJf sf-linux-x64.tar.xz -C ~/cli/sf --strip-components 1
+          echo "tar Finish."
           export PATH=~/cli/sf/bin:$PATH
+          echo "export Finish."
           PATH=~/cli/sf/bin:$PATH
+          echo "PATH Finish."
           sf -v
+          sf update
 
       - name: Salesforce CLI Setup
       # You may pin to the exact commit or the version.
