--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -34,16 +34,17 @@ jobs:
             # 
             #login_url: # optional, default is https://login.salesforce.com
             # combination of <password>:<security_token>
-            password: test12345:xwiBS0lfzB0nhVNlqUtNPt7K
+            password: test12345xwiBS0lfzB0nhVNlqUtNPt7K
             # Consumer Key of a connected App created within salesforce
             sfdc_client_id: 3MVG9WVXk15qiz1J5vh1stT25VHO_WfHOXTEzI1tu1ZASdl0zQclqsnEbf1OIW35ZuZSH6AWczM3T5UNfE0f2
             # Consumer Secret of a connected App created within salesforce
             sfdc_client_secret: E9A23791739F8C727F9527DAE03DF5B0A8052C471F277CDF8350ABE1973A983C
-
+        
       # sf project retrieve start --manifest ../manifest/package.xml
       # echo "Retrieve Finished."
       - name: Retreieve
         run: |
+          echo "${{secrets.USER_ID}}"
           pwd
           echo "Current Path"
           ls -a
