--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -10,19 +10,19 @@ jobs:
   back_up:
     runs-on: ubuntu-latest
     steps:
-      # Install Salesforce CLI
-      - name: Install Salesforce CLI
+      ## Install Salesforce CLI 주석
+      #- name: Install Salesforce CLI
         # wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-arm64.tar.xz
         # tar xJf sf-linux-arm64.tar.xz -C ~/cli/sf --strip-components 1
         # ~/cli/sf/install
-        run: |
-          wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-x64.tar.xz
-          mkdir -p ~/cli/sf
-          tar xJf sf-linux-x64.tar.xz -C ~/cli/sf --strip-components 1
-          export PATH=~/cli/sf/bin:$PATH
-          PATH=~/cli/sf/bin:$PATH
-          sf -v
-          sf update
+      #  run: |
+      #    wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-x64.tar.xz
+      #    mkdir -p ~/cli/sf
+      #    tar xJf sf-linux-x64.tar.xz -C ~/cli/sf --strip-components 1
+      #    export PATH=~/cli/sf/bin:$PATH
+      #    PATH=~/cli/sf/bin:$PATH
+      #    sf -v
+      #    sf update
 
       - name: Salesforce CLI Setup
       # You may pin to the exact commit or the version.
@@ -30,7 +30,7 @@ jobs:
         uses: karamchandanid/sfdx-setup@v2
         with:
             # 
-            user_name: hyunwook.jin@version2.com
+            user_name: ${{secrets.USER_ID}}
             # 
             #login_url: # optional, default is https://login.salesforce.com
             # combination of <password>:<security_token>
@@ -49,8 +49,7 @@ jobs:
           echo "Current Path"
           ls -a
           echo "Directory List"
-          cd ..
-          ls -a
+          sf project retrieve start --manifest ../manifest/package.xml
           
           
           
