--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -34,11 +34,11 @@ jobs:
             # 
             #login_url: # optional, default is https://login.salesforce.com
             # combination of <password>:<security_token>
-            password: test12345xwiBS0lfzB0nhVNlqUtNPt7K
+            password: ${{secrets.USER_PWD}}
             # Consumer Key of a connected App created within salesforce
-            sfdc_client_id: 3MVG9WVXk15qiz1J5vh1stT25VHO_WfHOXTEzI1tu1ZASdl0zQclqsnEbf1OIW35ZuZSH6AWczM3T5UNfE0f2
+            sfdc_client_id: ${{secrets.CLIENT_ID}}
             # Consumer Secret of a connected App created within salesforce
-            sfdc_client_secret: E9A23791739F8C727F9527DAE03DF5B0A8052C471F277CDF8350ABE1973A983C
+            sfdc_client_secret: ${{secrets.CLIENT_SECRET}}
         
       # sf project retrieve start --manifest ../manifest/package.xml
       # echo "Retrieve Finished."
@@ -49,7 +49,7 @@ jobs:
           echo "Current Path"
           ls -a
           echo "Directory List"
-          sf project retrieve start --manifest ../manifest/package.xml
+          sf -v
           
           
           
