--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       #Search Folder Graph
-      - name : Search Folder Graph
-        run : |
-          cd /
-          tree -f
-          ls -a
+      #- name : Search Folder Graph
+      #  run : |
+      #    cd /
+      #    tree -f
+      #    ls -a
       ## Install Salesforce CLI 주석
       #- name: Install Salesforce CLI
         # wget https://developer.salesforce.com/media/salesforce-cli/sf/channels/stable/sf-linux-arm64.tar.xz
@@ -48,9 +48,12 @@ jobs:
         
       # sf project retrieve start --manifest ../manifest/package.xml
       # echo "Retrieve Finished."
+      # Checkout the source code
+      - name: 'Checkout source code'
+        uses: actions/checkout@v4.1.3
+        
       - name: Retreieve
         run: |
-          echo "${{secrets.USER_ID}}"
           pwd
           echo "Current Path"
           ls -a
