--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -59,7 +59,7 @@ jobs:
           ls -a
           echo "Directory List"
           sf -v
-          sf project retrieve start --manifest ../manifest/package.xml
+          sf project retrieve start --manifest ./manifest/package.xml
           cd ./force-app/force-app/main/default/classes
           ls -a
 
