--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -65,6 +65,7 @@ jobs:
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
           git commit -am Backup
+          git remote set-url origin https://github.com/hyunwook14/sfdcVM.git
           git push
 
           
