--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -70,7 +70,7 @@ jobs:
             git add .
               git config --global user.email "github-actions@github.com"
               git config --global user.name "github-actions"
-              git commit -am $(date +"%Y%m%d Backup") 
+              git commit -am ${(date +"%Y%m%d Backup")} 
               git push
             exit;
           else
