--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -65,8 +65,9 @@ jobs:
           tree -f
           echo "After Retrieve Folde Tree"
           echo "$(git status --porcelain)"
-          commitMsg=$(date +"%Y%m%d")
-          commitMsg+=" Backup"
+          thisday=$(date +"%Y%m%d")
+          echo $commitMsg
+          commitMsg="$thisday Backup"
           if [ -n "$(git status --porcelain)" ]; then
             echo "변경사항이 있습니다.";
             git add .
